[package]
name = "htree"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Robabibert/HTree"
description = "Crate provides the lines contained within a 2D H-Tree. See https://en.wikipedia.org/wiki/H_tree"
keywords = ["htree","fractal","2d","graphic"] 


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
num = "0.4.0"


[dev-dependencies]
image = "0.24.4"
imageproc = "0.23.0"